🚀 [Server] 프로시져 전면 재작성